--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,134 @@
   <meta charset="UTF-8">
   <title>MP1 Starter</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="./media/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <div class="test"> My name is Anthony.</div>
-  <div class="cat">
-    <img src="./media/cat.jpg" alt="Cat">
-  </div>
+  <nav class = "normal">
+    <div class="nav-values">
+        <div class="nav-bar-item"> <a href = "#Home" class="active"> Home </a></div>
+        <div class="nav-bar-item"> <a href = "#Intro"> Intro </a> </div>
+        <div class="nav-bar-item"> <a href = "#Army"> Army </a> </div>
+        <div class="nav-bar-item"> <a href = "#Navy"> Navy </a> </div>
+        <div class="nav-bar-item"> <a href = "#Airforce"> Air Force </a> </div>
+    </div>
+  </nav>
+  
+  <section class = "Home content_page heading" id = "Home">
+    <a href="#Home2" class="fa fa-angle-double-down" id="Home_a"></a>
+  </section>
+
+  <section class = "content_page" id ="Home2">
+    <div class = "Home-heading"> Mahatma </div>
+    <div class= "Home-content">  
+      Mahatma Gandhi enviosioned a new path to freedom.<br><br>
+      From Truth and Non-Violence. <br><br>
+      He showed us that with dialogue and perseverance anything is possible. <br><br>
+      With India's "no first use policiy", we still embodie the belief of non-violence deep inside of us.<br><br>
+      However, if attacked, India will not sit back.<br><br>
+      We have immense power behind our humble face.<br><br>
+      Let's see them in action...
+    </div>
+  </section>
+
+  <section class="heading india-intro" id = "Intro">
+    The control
+  </section>
+
+  <section class = "content_page">
+      <div class= "control-row">
+        <div class="control-item control-item-f">
+          <img src = "./media/coas.jpg" alt="Picture of Bikram Singh">
+          <div class = "control-heading"> Chief of Army Staff</div>
+          <div class="control-name">Bikram Singh</div>
+        </div>
+        
+        <div class="control-item control-item-f">
+          <img src = "./media/cons.jpg" alt = "Picture of Robin K Dhowan">
+          <div class = "control-heading"> Chief of Naval Staff</div>
+          <div class="control-name">Robin K Dhowan</div>
+        </div>
+
+        <div class="control-item">
+          <img src = "./media/cois.jpg" alt = "Picture of Arup Raha">
+          <div class = "control-heading"> Chief of Air Staff</div>
+          <div class="control-name">Arup Raha</div>
+        </div>
+      </div>
+  </section>
+
+  <section class="heading india-army" id = "Army">
+    Indian Army
+  </section>
+
+  <section class = "content_page">
+    <div class="air-force-heading">The Kargil War (1991)</div>
+    <div class="army_pic">
+      <a href = "#dialog" class="modallink">
+        <img src = "./media/indk.jpg" alt="Modal with picture of Kargil War">
+      </a>
+    </div>
+    <div id = "modal">
+      <div id="dialog" class="window">
+        <div class="content">
+          The Kargil War, also known as the Kargil conflict, was an armed conflict between India and Pakistan that took place between May and July 1999 in the Kargil district of Kashmir and elsewhere along the Line of Control (LOC). In India, the conflict is also referred to as Operation Vijay which was the name of the Indian operation to clear the Kargil sector.
+          <a href = "#" class="close"><i class="fa fa-times"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="heading india-navy" id = "Navy" >
+  Indian Navy
+  </section>
+
+  <section class = "content_page">
+    <div class="air-force-heading">Pictures of Indian Navy</div>
+    <div class="carouselbox">
+      <i class="fa fa-arrow-left"></i>
+      <ol>
+        <li>
+          <img class = "visible" src = "./media/c0.jpg" alt ="Images of Indian Navy">
+        </li>
+        <li>
+          <img src = "./media/c1.jpg" alt ="Images of Indian Navy">
+        </li>
+        <li>
+          <img src = "./media/c2.jpg" alt ="Images of Indian Navy">
+        </li>
+        <li>
+          <img src = "./media/c3.jpg" alt ="Images of Indian Navy">
+        </li>
+        <li>
+          <img src = "./media/c4.jpg" alt ="Images of Indian Navy">
+        </li>
+      </ol>
+      <i class="fa fa-arrow-right"></i>
+    </div>
+  </section>
+
+  <section class = "heading india-air" id="Airforce">
+    Indian Air Force
+  </section>
+
+  <section class = "content_page"> 
+    <div class="air-force-heading">The future of indian airforce</div>
+    <div class="airforce-video">
+      <video controls> 
+        <source src ="./media/brahmos.mp4" type="video/mp4">
+        Video of brahmos
+      </video>
+    </div>
+  </section>
+
+  <section class = "footer"> 
+    <div class="footer_icons">
+      <a class="brandico-facebook" href = "https://www.facebook.com/siddhanthm" target="_blank"></a>
+      <a class="brandico-linkedin" href = "https://www.linkedin.com/in/siddhanthm" target="_blank"></a>
+      <a class="brandico-github" href = "https://github.com/siddhanthm" target="_blank"></a>
+    </div>
+  </section>
 
   <script src="lib/jquery-2.1.3.min/index.js"></script>
   <script src="js/script.js"></script>
